[gd_scene load_steps=16 format=3 uid="uid://bbblp03l15iok"]

[ext_resource type="Script" path="res://Scripts/pasillo_2.gd" id="1_ifasc"]
[ext_resource type="Texture2D" uid="uid://d312ffm62e3ml" path="res://Assets/Maps/Pasillo2.png" id="2_8glfd"]
[ext_resource type="Texture2D" uid="uid://b385p34kg7415" path="res://Assets/Sprites/indoors.png" id="3_dgjws"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3sen3"]
size = Vector2(18, 143)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_s4wsh"]
a = Vector2(60, 52)
b = Vector2(-203, 51)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_cibhw"]
a = Vector2(239, -17)
b = Vector2(239, 46)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_45gx3"]
size = Vector2(138, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dmh7x"]
size = Vector2(222, 62)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_m51cv"]
a = Vector2(99, 52)
b = Vector2(237, 52)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_m7sc3"]
a = Vector2(62, 60)
b = Vector2(101, 60)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vsqdf"]
size = Vector2(20, 67)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_82xwh"]
texture = ExtResource("3_dgjws")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
0:2/0 = 0
1:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
3:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
7:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:4/0 = 0
8:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:4/0 = 0
9:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:4/0 = 0
10:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
5:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:5/0 = 0
7:5/0 = 0
7:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:5/0 = 0
8:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 0.892914, -8, 1.09134)
9:5/0 = 0
9:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -2.56326, 8, -8, 8, 8, 8, 2.74004)
9:5/0/physics_layer_0/polygon_1/points = PackedVector2Array(-1.06066, -0.972272, -2.12132, 3.09359, 0.353553, 8, 8, 8, 8, -8, 5.83363, -8, 5.12652, -2.38649)
10:5/0 = 0
10:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
8:6/0 = 0
9:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
0:8/0 = 0
0:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:8/0 = 0
1:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:8/0 = 0
2:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:8/0 = 0
3:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:8/0 = 0
4:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:8/0 = 0
5:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:8/0 = 0
6:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:8/0 = 0
7:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:8/0 = 0
8:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:8/0 = 0
9:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:9/0 = 0
0:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:9/0 = 0
1:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:9/0 = 0
2:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:9/0 = 0
3:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:9/0 = 0
4:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:9/0 = 0
5:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:9/0 = 0
6:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:9/0 = 0
7:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:9/0 = 0
8:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
10:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
6:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -6.27557, 8, -6.45235, 8, 8, -8, 8)
7:12/0 = 0
7:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -6.27557, 8, -6.45235, 8, 8, -8, 8)
8:12/0 = 0
8:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -6.27557, 8, -6.45235, 8, 8, -8, 8)
10:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
8:15/0 = 0
9:15/0 = 0
10:15/0 = 0

[sub_resource type="TileSet" id="TileSet_e87wf"]
physics_layer_0/collision_layer = 1
navigation_layer_0/layers = 1
sources/0 = SubResource("TileSetAtlasSource_82xwh")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pnthj"]
size = Vector2(25, 41)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ybt3l"]
size = Vector2(27, 20)

[node name="Pasillo2" type="Node2D"]
position = Vector2(558, 322)
script = ExtResource("1_ifasc")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.196078, 0.196078, 0.196078, 1)
scale = Vector2(2, 2)
texture = ExtResource("2_8glfd")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-199, -17.5)
shape = SubResource("RectangleShape2D_3sen3")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource("SegmentShape2D_s4wsh")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource("SegmentShape2D_cibhw")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(169, -28)
shape = SubResource("RectangleShape2D_45gx3")

[node name="CollisionShape2D6" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-47, -50)
shape = SubResource("RectangleShape2D_dmh7x")

[node name="CollisionShape2D7" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource("SegmentShape2D_m51cv")

[node name="CollisionShape2D8" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource("SegmentShape2D_m7sc3")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(244, 17)
shape = SubResource("RectangleShape2D_vsqdf")

[node name="TileMap" type="TileMap" parent="."]
modulate = Color(0.196078, 0.196078, 0.196078, 1)
position = Vector2(0, -7)
scale = Vector2(2, 2)
tile_set = SubResource("TileSet_e87wf")
format = 2
layer_1/name = "Layer1"
layer_1/tile_data = PackedInt32Array(-131070, 524288, 4, -65534, 524288, 5, -131068, 393216, 8, -131067, 458752, 8, -65539, 0, 4, -3, 0, 5, -65538, 65536, 4, -2, 65536, 5, -65537, 131072, 4, -1, 131072, 5, -65542, 393216, 4, -6, 393216, 5)
layer_2/name = "Layer2"
layer_2/y_sort_enabled = true
layer_2/z_index = 1
metadata/_edit_group_ = true

[node name="Area2D2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2(79, -34)
shape = SubResource("RectangleShape2D_pnthj")

[node name="Area2D3" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D3"]
position = Vector2(81.5, 62)
shape = SubResource("RectangleShape2D_ybt3l")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_area_2d_2_body_entered"]
[connection signal="body_entered" from="Area2D3" to="." method="_on_area_2d_3_body_entered"]
